6//cancel button timer bug fixed whitespace fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,14 +9,3 @@ p{
 
 
   }
-  a{
-    color: #ffffff;
-    text-decoration: none;
-    font-size: 20px;
-}
-  a.visited{
-    color: #ffffff;
-}
-  a.hover{
-    color: #ffffff;
-}
