--- a/src/app/components/jams/jams.component.css
+++ b/src/app/components/jams/jams.component.css
@@ -11,7 +11,7 @@ th.mat-sort-header-sorted {
 }
 
 .stat-left-container{
-  width:600px ;
+  width:520px ;
   margin-top: 1%;
 }
 .text{
